--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "vercel dev",
-    "deploy": "vercel deploy --prod"
+    "test": ""
   },
   "keywords": [],
   "author": "",
